auto publishing updates to notebooks

--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7aa3ab4c",
+   "id": "7f01a10e",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e6cebd3",
+   "id": "f9ca738e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e410e2d",
+   "id": "daa090b1",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b5c232f",
+   "id": "9ae00160",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9da3622d",
+   "id": "c4a060f7",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2bb49ba",
+   "id": "e9856a18",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec4e569c",
+   "id": "8f64bfe8",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c130c2",
+   "id": "6ea735e2",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6873889",
+   "id": "54043130",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "143efa8c",
+   "id": "e4808659",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "928bb097",
+   "id": "c3e68b68",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "579af8de",
+   "id": "6a8b5e82",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25aec8ef",
+   "id": "9e91feec",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a986506",
+   "id": "930ecc02",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e47b1d98",
+   "id": "7765ea83",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01d6de1b",
+   "id": "decf149a",
    "metadata": {
     "hide-output": false
    },
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c5cc579",
+   "id": "a889dd48",
    "metadata": {
     "hide-output": false
    },
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd663887",
+   "id": "001aa264",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "770b9cce",
+   "id": "3acc01d0",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55d65dd3",
+   "id": "fb637933",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a904f0dd",
+   "id": "d0bfbe05",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d5b7871",
+   "id": "415e3008",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c76ef011",
+   "id": "1f2a3fbe",
    "metadata": {
     "hide-output": false
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9f1f61f",
+   "id": "6aa81963",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65320b14",
+   "id": "2f3e1d89",
    "metadata": {
     "hide-output": false
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "278e07ae",
+   "id": "9a22b279",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39127954",
+   "id": "6618d16b",
    "metadata": {},
    "source": [
     "### Further vectorization\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3afdac5a",
+   "id": "6b27184c",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a30a86cf",
+   "id": "f5d2bbb1",
    "metadata": {},
    "source": [
     "Let’s test it with compile time included."
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a70ea5e",
+   "id": "d3f7a8f3",
    "metadata": {
     "hide-output": false
    },
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1310ca3c",
+   "id": "8e4dbde2",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afd38110",
+   "id": "6687e9fd",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd61aff4",
+   "id": "1f3b314e",
    "metadata": {},
    "source": [
     "On one hand, this version is faster than the previous one, where random variables were\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "663a47ca",
+   "id": "7f24b6a3",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc2bd9d5",
+   "id": "f0f04bfc",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "244000b6",
+   "id": "f6c283d4",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdd9607d",
+   "id": "ac77b026",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76197191",
+   "id": "f1ad6e89",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3370bcc5",
+   "id": "553ca2c5",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2052776",
+   "id": "291bc521",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd8671b6",
+   "id": "f3a84768",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8af89d6",
+   "id": "d501986b",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c30936a8",
+   "id": "0fe5e4a7",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19528958",
+   "id": "bf7d6e4b",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef2e50f",
+   "id": "0123d549",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3e9c84c",
+   "id": "732dfbaa",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4e6e5d4",
+   "id": "1bb2f6d3",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68ee130e",
+   "id": "abce57f8",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c71ee02f",
+   "id": "9c359d85",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   }
  ],
  "metadata": {
-  "date": 1710383115.6631093,
+  "date": 1710464658.466083,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
