--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c8132eba",
+   "id": "56ec85c7",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8de3373d",
+   "id": "9f486de8",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d53c05",
+   "id": "6dd132db",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a6787db",
+   "id": "bf732b9e",
    "metadata": {
     "hide-output": false
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15e55cb3",
+   "id": "2459c909",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fc71418",
+   "id": "ba11b097",
    "metadata": {
     "hide-output": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f27dbfc",
+   "id": "ecb3639f",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d32d69f6",
+   "id": "65a9c66f",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f67271d3",
+   "id": "fb1ade5a",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "558cef04",
+   "id": "4cdfaa31",
    "metadata": {
     "hide-output": false
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1edeb2d",
+   "id": "80bc0fd4",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "865cff02",
+   "id": "383919e5",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97bfff78",
+   "id": "e4caeafa",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "862b5d3b",
+   "id": "b24cd12f",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f16cd82e",
+   "id": "3a9aeeaf",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e832f421",
+   "id": "127b9c2c",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5527f298",
+   "id": "210d39e8",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e48381d",
+   "id": "11523a72",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85b8f67d",
+   "id": "8195b40e",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b29ad2b",
+   "id": "486e9a35",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f35682f",
+   "id": "253744ff",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(4.15)](#equation-eq-ntecxdk).\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "784c0de3",
+   "id": "bb221441",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "638dfa0e",
+   "id": "3e1036e5",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54cb6ab1",
+   "id": "1a7fee56",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbde2cfc",
+   "id": "b75ef8fd",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "031f2384",
+   "id": "2e35febf",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "796f4e24",
+   "id": "a943af37",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fef014d1",
+   "id": "fcd8e6d4",
    "metadata": {
     "hide-output": false
    },
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "566b0922",
+   "id": "c4d37136",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "683b2d7e",
+   "id": "40d392b0",
    "metadata": {
     "hide-output": false
    },
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a8e9067",
+   "id": "ad14838b",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e62e9da",
+   "id": "fdd1121c",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c7ca279",
+   "id": "3e6023ec",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93771975",
+   "id": "71328a30",
    "metadata": {
     "hide-output": false
    },
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f7edfaa",
+   "id": "7d18c146",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e0c884a",
+   "id": "ba2e4dbf",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40e9395b",
+   "id": "674a0cc3",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab1ce1d4",
+   "id": "1060d351",
    "metadata": {
     "hide-output": false
    },
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4923e0ac",
+   "id": "d9a8e082",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cba7b6e1",
+   "id": "43bec6b4",
    "metadata": {
     "hide-output": false
    },
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55fa5634",
+   "id": "aef42797",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53f653bf",
+   "id": "f73131ee",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25f4d9c4",
+   "id": "51837a9d",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2553b7be",
+   "id": "54673ad9",
    "metadata": {
     "hide-output": false
    },
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55bd07f6",
+   "id": "07bc8878",
    "metadata": {
     "hide-output": false
    },
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "894b717c",
+   "id": "17aa4f1c",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8feddaab",
+   "id": "8122b9a4",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae5f9e94",
+   "id": "c941aa2c",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0273d130",
+   "id": "05373196",
    "metadata": {
     "hide-output": false
    },
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22f86102",
+   "id": "6828d5e3",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d67163a1",
+   "id": "259a15ac",
    "metadata": {
     "hide-output": false
    },
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22424280",
+   "id": "86b1e946",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e4866f4",
+   "id": "02d977dd",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feaf11df",
+   "id": "5c7c0be2",
    "metadata": {
     "hide-output": false
    },
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de283241",
+   "id": "6b7386a4",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1abf0d7a",
+   "id": "a07f9fa9",
    "metadata": {
     "hide-output": false
    },
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0edbc3da",
+   "id": "7e2aacf5",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db8ad685",
+   "id": "cb7c9ced",
    "metadata": {
     "hide-output": false
    },
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5ec7cd4",
+   "id": "0c75859f",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1357,7 +1357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "166af947",
+   "id": "d5da98c2",
    "metadata": {
     "hide-output": false
    },
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e147dc2",
+   "id": "64f0d6b3",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1653219a",
+   "id": "d3b6b322",
    "metadata": {
     "hide-output": false
    },
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7781e97f",
+   "id": "28e5aec4",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa08fccf",
+   "id": "e7cc3112",
    "metadata": {
     "hide-output": false
    },
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42ccfd65",
+   "id": "af22e4e4",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1445,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02397c6e",
+   "id": "dbf68aca",
    "metadata": {
     "hide-output": false
    },
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdd6c90d",
+   "id": "03713762",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1476,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d21abdaa",
+   "id": "e8915d0e",
    "metadata": {
     "hide-output": false
    },
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34c980d",
+   "id": "dfe54480",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1497,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dd41a98",
+   "id": "6ddce434",
    "metadata": {
     "hide-output": false
    },
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d7bbc51",
+   "id": "f5f3484a",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1519,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd27756f",
+   "id": "976e3ebe",
    "metadata": {
     "hide-output": false
    },
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91ada035",
+   "id": "5fb63325",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e83257d",
+   "id": "63bab4a0",
    "metadata": {
     "hide-output": false
    },
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "610e1113",
+   "id": "3290bfc0",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1561,7 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffe42836",
+   "id": "088c06a5",
    "metadata": {
     "hide-output": false
    },
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "670402f8",
+   "id": "496f4f25",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1583,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1c421e6",
+   "id": "de506a95",
    "metadata": {
     "hide-output": false
    },
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e9cf5ae",
+   "id": "a356dcbb",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1612,7 +1612,7 @@
   }
  ],
  "metadata": {
-  "date": 1710383115.983611,
+  "date": 1710464658.7967129,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
